@@ -920,6 +920,26 @@ class TestCase(unittest.TestCase):
             self.fail("%r is an instance of %s rather than %s" % (
                 obj, obj.__class__, kls))
 
+    def expectFailure(self, reason, test, *args, **kwargs):
+        """Invoke a test, expecting it to fail for the given reason.
+
+        Intended to be used with a callable that raises AssertionError as the
+        test.  args and kwargs are passed to the test.
+
+        Raises KnownFailure if the test fails.  Raises AssertionError if the
+        test succeeds.
+
+        example usage::
+          self.expectFailure('File creation is broken', self.failUnlessExists,
+                             'path/that/should/exist')
+        """
+        try:
+            test(*args, **kwargs)
+        except AssertionError:
+            raise KnownFailure(reason)
+        else:
+            self.fail('Unexpected success.  Should have failed: %s' % reason)
+
     def _capture_warnings(self, a_callable, *args, **kwargs):
         """A helper for callDeprecated and applyDeprecated.
 
